3.2.3 (2016-12-DD)
------------------

Enhancements
 - [web] updated CKEditor to version 4.6.0

Bug fixes
 - [web] restore attributes when rewriting base64-encoded img tags (#3814)

3.2.2 (2016-11-23)
------------------

New features
 - [core] support repetitive email alarms on tasks and events (#1053)
 - [web] allow to hide center column on large screens (#3861)
 - [eas] relaxed permission requirements for subscription synchronizations (#3118 and #3180)

Enhancements
 - [core] added sha256-crypt and sha512-crypt password support
 - [core] updated time zones to version 2016i
 - [eas] now also search on senders when using EAS Search ops
 - [web] allow multiple messages to be marked as seen (#3873)
 - [web] use switches instead of checkboxes in Calendars module

Bug fixes
 - [core] fixed condition in weekly recurrence calculator
 - [core] always send IMIP messages using UTF-8
 - [web] fixed mail settings persistence when sorting by arrival date
 - [web] disable submit button while saving an event or a task (#3880)
 - [web] disable submit button while saving a contact
 - [web] fixed computation of week number
 - [web] fixed and improved IMAP folder subscriptions manager (#3865)
 - [web] fixed Sieve script activation when vacation start date is in the future (#3885)
 - [web] fixed moving a component without the proper rights (#3889)
 - [web] restored Sieve folder encoding support (#3904)
 - [web] allow edition of a mailbox rights when user can administer mailbox

3.2.1 (2016-11-02)
------------------

Enhancements
 - [web] add constraints to start/end dates of automatic responder (#3841)
 - [web] allow a mailbox to be deleted immediately (#3875)
 - [web] updated Angular to version 1.5.8
 - [eas] initial support for recurring tasks EAS
 - [eas] now support replied/forwarded flags using EAS (#3796)
 - [core] updated time zones to version 2016h

Bug fixes
 - [web] fixed tasks list when some weekdays are disabled
 - [web] fixed automatic refresh of calendar view