@@ -1,8 +1,6 @@
 /* NGVCardPhoto.m - this file is part of NGCards
  *
- * Copyright (C) 2010 Inverse inc.
- *
- * Author: Wolfgang Sourdeau <wsourdeau@inverse.ca>
+ * Copyright (C) 2010-2016 Inverse inc.
  *
  * NGCards is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the
