@@ -1,7 +1,6 @@
 /* SOGoContactLDIFEntry.h - this file is part of SOGo
- * Copyright (C) 2006-2011 Inverse inc.
  *
- * Author: Wolfgang Sourdeau <wsourdeau@inverse.ca>
+ * Copyright (C) 2006-2016 Inverse inc.
  *
  * This file is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
