@@ -1,6 +1,9 @@
 3.2.3 (2016-12-DD)
 ------------------
 
+New features
+ - [core] added photo support for LDAP-based address books
+
 Enhancements
  - [web] updated CKEditor to version 4.6.0
 
